tests/baselines/reference/propertyAssignmentOnUnresolvedImportedSymbol.errors.txt
bug28576.js(1,15): error TS2307: Cannot find module 'arglebaz' or its corresponding type declarations.


==== bug28576.js (1 errors) ====
    import x from 'arglebaz'
                  ~~~~~~~~~~
!!! error TS2307: Cannot find module 'arglebaz' or its corresponding type declarations.
    {
        x.bar = 1
    }
    